--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,3 +1,4 @@
+<router-outlet></router-outlet>
 <div class="d-flex justify-content-center align-items-center vh-100 bg-light">
   <div class="card shadow p-4" style="width: 360px; border-radius: 1rem;">
     <h3 class="text-center mb-4 text-primary">
