--- a/src/app/pages/cita/cita.html
+++ b/src/app/pages/cita/cita.html
@@ -1,8 +1,7 @@
 <app-navbar></app-navbar>
-
 <div class="container py-5">
   <div class="card shadow p-4">
-    <h3 class="text-center mb-4">Agendar Cita</h3>
+    <h3 class="text-center mb-4">Registro Cita</h3>
 
     <form (ngSubmit)="guardarCita()">
       <div class="mb-3">
@@ -41,3 +40,4 @@
     </form>
   </div>
 </div>
+
